toys list create

--- a/toys/templates/toys/dashboard.html
+++ b/toys/templates/toys/dashboard.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:toys="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Alltoys - dashboard</title>
 </head>
 <body>
-{{welcome_text}}
+<div>
+    {{welcome_text}}
+</div>
+
+<div>
+    <table>
+        <tr>
+            <td style="width: 100px"><a href="#"> Users </a></td>
+        </tr>
+    </table>
+</div>
 </body>
 </html>
